# dem

./: .clang-format  .gitattributes  .gitignore  CMakeLists.txt  README.md
rootfs/: init
rootfs/etc/: inittab  shells
rootfs/lib/modules/6.18.5/: modules.alias  modules.builtin  modules.builtin.modinfo  modules.dep  modules.order  modules.softdep  modules.symbols
rootfs/lib/modules/6.18.5/kernel/crypto/: aead.ko  aes_generic.ko  af_alg.ko  akcipher.ko  algif_hash.ko  authenc.ko  authencesn.ko  blake2b_generic.ko  bpf_crypto_skcipher.ko  cbc.ko  crc32c-cryptoapi.ko  crypto.ko  crypto_acompress.ko  crypto_algapi.ko  crypto_engine.ko  crypto_hash.ko  crypto_skcipher.ko  cryptomgr.ko  ctr.ko  drbg.ko  ecb.ko  echainiv.ko  gcm.ko  geniv.ko  ghash-generic.ko  hmac.ko  jitterentropy_rng.ko  kpp.ko  rng.ko  rsa_generic.ko  seqiv.ko  sha256.ko  sha3_generic.ko  sha512.ko  sig.ko  xor.ko  xxhash_generic.ko
rootfs/lib/modules/6.18.5/kernel/drivers/char/hw_random/: jh7110-trng.ko
rootfs/lib/modules/6.18.5/kernel/drivers/clk/starfive/: clk-starfive-jh7100-audio.ko  clk-starfive-jh7110-aon.ko  clk-starfive-jh7110-isp.ko  clk-starfive-jh7110-stg.ko  clk-starfive-jh7110-vout.ko
rootfs/lib/modules/6.18.5/kernel/drivers/cpufreq/: cpufreq_conservative.ko  cpufreq_powersave.ko
rootfs/lib/modules/6.18.5/kernel/drivers/crypto/virtio/: virtio_crypto.ko
rootfs/lib/modules/6.18.5/kernel/drivers/dma/: mmp_pdma.ko
rootfs/lib/modules/6.18.5/kernel/drivers/gpu/drm/: drm.ko  drm_panel_orientation_quirks.ko
rootfs/lib/modules/6.18.5/kernel/drivers/hwmon/: sfctemp.ko
rootfs/lib/modules/6.18.5/kernel/drivers/i2c/: i2c-dev.ko  i2c-mux.ko
rootfs/lib/modules/6.18.5/kernel/drivers/md/: dm-bio-prison.ko  dm-bufio.ko  dm-mod.ko  dm-thin-pool.ko
rootfs/lib/modules/6.18.5/kernel/drivers/md/persistent-data/: dm-persistent-data.ko
rootfs/lib/modules/6.18.5/kernel/drivers/media/mc/: mc.ko
rootfs/lib/modules/6.18.5/kernel/drivers/media/v4l2-core/: v4l2-async.ko  v4l2-dv-timings.ko  v4l2-fwnode.ko  videodev.ko
rootfs/lib/modules/6.18.5/kernel/drivers/net/: dummy.ko  macvlan.ko  mii.ko  veth.ko
rootfs/lib/modules/6.18.5/kernel/drivers/net/ipvlan/: ipvlan.ko
rootfs/lib/modules/6.18.5/kernel/drivers/net/pcs/: pcs_xpcs.ko
rootfs/lib/modules/6.18.5/kernel/drivers/net/vxlan/: vxlan.ko
rootfs/lib/modules/6.18.5/kernel/drivers/phy/starfive/: phy-jh7110-dphy-rx.ko  phy-jh7110-pcie.ko  phy-jh7110-usb.ko
rootfs/lib/modules/6.18.5/kernel/drivers/pwm/: pwm-pxa.ko
rootfs/lib/modules/6.18.5/kernel/drivers/spi/: spi-cadence-quadspi.ko  spi-pl022.ko
rootfs/lib/modules/6.18.5/kernel/drivers/usb/cdns3/: cdns-usb-common.ko  cdns3-starfive.ko  cdns3.ko
rootfs/lib/modules/6.18.5/kernel/drivers/usb/gadget/: libcomposite.ko
rootfs/lib/modules/6.18.5/kernel/drivers/usb/musb/: musb_hdrc.ko
rootfs/lib/modules/6.18.5/kernel/drivers/usb/phy/: phy-generic.ko
rootfs/lib/modules/6.18.5/kernel/drivers/usb/roles/: roles.ko
rootfs/lib/modules/6.18.5/kernel/drivers/video/backlight/: backlight.ko
rootfs/lib/modules/6.18.5/kernel/fs/configfs/: configfs.ko
rootfs/lib/modules/6.18.5/kernel/fs/nfs/blocklayout/: blocklayoutdriver.ko
rootfs/lib/modules/6.18.5/kernel/fs/nls/: nls_iso8859-1.ko
rootfs/lib/modules/6.18.5/kernel/fs/overlayfs/: overlay.ko
rootfs/lib/modules/6.18.5/kernel/lib/: asn1_decoder.ko  oid_registry.ko
rootfs/lib/modules/6.18.5/kernel/lib/crypto/: gf128mul.ko  libaes.ko  libcryptoutils.ko  libsha512.ko
rootfs/lib/modules/6.18.5/kernel/lib/crypto/mpi/: mpi.ko
rootfs/lib/modules/6.18.5/kernel/lib/lzo/: lzo_compress.ko
rootfs/lib/modules/6.18.5/kernel/lib/raid6/: raid6_pq.ko
rootfs/lib/modules/6.18.5/kernel/lib/zlib_deflate/: zlib_deflate.ko
rootfs/lib/modules/6.18.5/kernel/net/802/: psnap.ko  stp.ko
rootfs/lib/modules/6.18.5/kernel/net/8021q/: 8021q.ko
rootfs/lib/modules/6.18.5/kernel/net/bridge/: br_netfilter.ko  bridge.ko
rootfs/lib/modules/6.18.5/kernel/net/can/: can-bcm.ko  can-gw.ko  can-raw.ko  can.ko
rootfs/lib/modules/6.18.5/kernel/net/ipv4/: esp4.ko  udp_tunnel.ko
rootfs/lib/modules/6.18.5/kernel/net/ipv4/netfilter/: nf_defrag_ipv4.ko
rootfs/lib/modules/6.18.5/kernel/net/ipv6/: ip6_udp_tunnel.ko
rootfs/lib/modules/6.18.5/kernel/net/ipv6/netfilter/: ip6t_ipv6header.ko  nf_defrag_ipv6.ko
rootfs/lib/modules/6.18.5/kernel/net/llc/: llc.ko
rootfs/lib/modules/6.18.5/kernel/net/netfilter/: nf_conntrack.ko  nf_conntrack_ftp.ko  nf_conntrack_tftp.ko  nf_log_syslog.ko  x_tables.ko  xt_addrtype.ko  xt_conntrack.ko  xt_ipvs.ko  xt_mark.ko  xt_tcpudp.ko
rootfs/lib/modules/6.18.5/kernel/net/netfilter/ipvs/: ip_vs.ko  ip_vs_rr.ko
rootfs/lib/modules/6.18.5/kernel/net/sched/: cls_cgroup.ko
rootfs/lib/modules/6.18.5/kernel/net/xfrm/: xfrm_algo.ko  xfrm_user.ko
rootfs/root/: fbdoom  hello.txt
rootfs/usr/lib/: os-release
scripts/: pack.sh  unpack.sh
src/: main.cpp
(+30 files in other folders)
